Bug #46765
mds: segv in MDCache::wait_for_uncommitted_fragments
% Done:
0%
Source:
Q/A
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
crash
Pull request ID:
Crash signature:
Description
2020-07-29T02:01:09.512+0000 7f058e203700 1 mds.0.27 waiting for uncommitted fragments 2020-07-29T02:01:09.512+0000 7f058e203700 -1 *** Caught signal (Segmentation fault) ** in thread 7f058e203700 thread_name:MR_Finisher ceph version 16.0.0-3907-g30aa5304957 (30aa53049577e70968a728cf36a545a209e8d28b) pacific (dev) 1: (()+0x128a0) [0x7f059bc028a0] 2: (pthread_mutex_lock()+0) [0x7f059bbf9fa0] 3: (C_GatherBase<MDSContext, C_MDSInternalNoop>::new_sub()+0x39) [0x55c2eac265f9] 4: (MDCache::wait_for_uncommitted_fragments(C_GatherBase<MDSContext, C_MDSInternalNoop>*)+0x40) [0x55c2eab79c70] 5: (MDSRank::rejoin_done()+0x2a7) [0x55c2eaab60d7] 6: (MDSContext::complete(int)+0x52) [0x55c2ead7e582] 7: (MDCache::open_snaprealms()+0xa53) [0x55c2eabddfb3] 8: (MDCache::rejoin_gather_finish()+0x121) [0x55c2eabe4db1] 9: (MDCache::rejoin_open_sessions_finish(std::map<client_t, std::pair<Session*, unsigned long>, std::less<client_t>, std::allocator<std::pair<client_t const, std::pair<Session*, unsigned long> > > >&)+0xea) [0x55c2eabf426a] 10: (MDSContext::complete(int)+0x52) [0x55c2ead7e582] 11: (MDSIOContextBase::complete(int)+0x233) [0x55c2ead7ea33] 12: (MDSLogContextBase::complete(int)+0x40) [0x55c2ead7efa0] 13: (Finisher::finisher_thread_entry()+0x195) [0x7f059c33fd55] 14: (()+0x76db) [0x7f059bbf76db] 15: (clone()+0x3f) [0x7f059addda3f] NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
From: /ceph/teuthology-archive/pdonnell-2020-07-28_23:57:49-kcephfs-wip-pdonnell-testing-20200728.221932-distro-basic-smithi/5265360/remote/smithi186/log/ceph-mds.a.log.gz
Related issues
History
#1 Updated by Patrick Donnelly 6 months ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 36358
#2 Updated by Patrick Donnelly 6 months ago
- Related to Bug #45699: mds may start to fragment dirfrag before rollback finishes added
#3 Updated by Patrick Donnelly 6 months ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Nathan Cutler 5 months ago
- Copied to Backport #46942: octopus: mds: segv in MDCache::wait_for_uncommitted_fragments added
#5 Updated by Nathan Cutler 5 months ago
- Copied to Backport #46943: nautilus: mds: segv in MDCache::wait_for_uncommitted_fragments added
#6 Updated by Nathan Cutler 3 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".